syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "sw.stepCounter.service1";
option java_outer_classname = "stepCounterImpl";

package service1;

// StepCounter service
service StepCounter {
  // Sends multiple steps every minute
  rpc SendSteps(stream StepsRequest) returns (StepCount) {}

  // Requests how many steps have been done in the last hour (Unary)
  rpc GetLastHourSteps(google.protobuf.Empty) returns (StepCount) {}

  // Requests average steps for the period given //changed
  rpc GetAverage(AverageStepRequest) returns (AverageStepCount) {}

  // Sets a daily step goal and tracks progress towards that goal 
  rpc SetStepGoal(StepGoal) returns (stream StepGoalResponse) {}
}

// StepCounter request and response messages
message StepsRequest {
  int32 steps = 1;
}

message StepCount {
  int32 count = 1;
}

//
enum Periods {
	LAST_DAY = 0;
	LAST_5_DAYS = 1;
	LAST_10_DAYS = 2;
	LAST_30_DAYS = 3;
}

// HourlyStepRequest message references the TimePeriod enumeration
message AverageStepRequest {
  Periods period = 1;
}

// HourlyStepCount message also references the WeekDays enumeration
message AverageStepCount {
  int32 average_steps = 1;
  Periods period = 2;
  string message = 3;
}

message StepGoal {
  int32 goal = 1;
}

message StepGoalResponse {
  bool success = 1;
  int32 left = 2;
  string message = 3;
}

